[gd_scene load_steps=5 format=3 uid="uid://bt03an2qhrn2h"]

[ext_resource type="Script" path="res://scripts/components/HealthComponent.gd" id="1_y30pd"]
[ext_resource type="AudioStream" uid="uid://daboogtimxvl4" path="res://assets/sounds/hitHurt.wav" id="2_ifq2a"]
[ext_resource type="AudioStream" uid="uid://ccqng8yi1cnxf" path="res://assets/sounds/hitDie.wav" id="3_k4dho"]
[ext_resource type="AudioStream" uid="uid://cs8r8ch0tp8np" path="res://assets/sounds/heal.wav" id="4_p6xtc"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_y30pd")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ifq2a")

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_k4dho")

[node name="HealSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p6xtc")
